# recommender-item-based-cf-backend

./: .env.example  .gitignore  pyproject.toml
src/: main.py
src/application/providers/: uow.py
src/application/usecase/movie_lens/: movie_lens_import.py
src/application/usecase/movies/: get.py
src/application/usecase/occupations/: get.py
src/application/usecase/ratings/: create.py
src/application/usecase/recommender/: recommender_builder.py
src/application/usecase/users/: create.py  get.py  update.py
src/domain/entities/movie_lens/: movie.py  occupation.py  raitings.py  user.py
src/domain/interfaces/: recommender.py
src/domain/repositories/: base.py
src/infrastructure/config/: settings.py
src/infrastructure/db/: db.py  db.sqlite  session.py
src/infrastructure/db/models/: __init__.py
src/infrastructure/repositories/: base.py  genre.py  movie.py  occupation.py  rating.py  user.py
src/infrastructure/services/: movie_lens_importer.py
src/infrastructure/services/recommender_module/: recommender_service.py
src/presentation/api/: roles.py  router_v1.py
src/presentation/api/v1/: movies.py  occupations.py  rating.py  recommendations.py  users.py
src/presentation/dependencies/movie_lens/: movie_lens_impot.py
src/presentation/dependencies/movies/: get.py
src/presentation/dependencies/occupations/: get.py
src/presentation/dependencies/ratings/: create.py
src/presentation/dependencies/recommender/: recommender_builder.py  (+1 more)
src/presentation/middlewares/: auth.py
src/shared/assets/: funk_svd.pt
src/shared/types/: roles.py
(+17 files in other folders)
